Adoption Request: Azure Blob extension enhancements